Fixed Project icons not aligning

--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,9 @@ body{
     font-family: Roboto-Slab, Georgia, serif;
     font-size: 1.3em;
     flex-grow: 1;
+    max-width: 11ch;
 }
+
 
 
 #copyright{
